# univariate_tools

./: CITATION.cff  README.md  pyproject.toml  search.js
docs/: index.html  univariate_tools.html
docs/univariate_tools/: fitting.html
examples/: Example.ipynb  Example_univariate_tools.ipynb  functional_examples_2.ipynb
examples/.ipynb_checkpoints/: Example_univariate_tools-checkpoint.ipynb  Fitting_Example-checkpoint.ipynb
univariate_tools/: __init__.py  fitting.py  interpolation.html  interpolation.py
