[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "univariate-tools"
dynamic = ["version"]
description = 'Tools to fit, interpolate, synthesize univariate data.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "sandersa", email = "aric.sanders@nist.gov" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["scipy","numpy","matplotlib","sympy","statsmodels","scikit-misc","scikit-learn","seaborn"]

[project.urls]
Documentation = "https://github.com/sandersa/univariate-tools#readme"
Issues = "https://github.com/sandersa/univariate-tools/issues"
Source = "https://github.com/sandersa/univariate-tools"

[tool.hatch.version]
path = "univariate_tools/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:univariate_tools tests}"

[tool.coverage.run]
source_pkgs = ["univariate_tools", "tests"]
branch = true
parallel = true
omit = [
  "univariate_tools/__about__.py",
]

[tool.coverage.paths]
univariate_tools = ["univariate_tools", "*/univariate-tools/univariate_tools"]
tests = ["tests", "*/univariate-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
